--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
 install: true
 script:
 - mvn clean compile
-- apt install -y nsis
+- sudo apt install -y nsis
 - unzip RuneChanger-1.14.0.zip -d rc-ready
 - cd target
 - makensis ../scripts/installer.nsi
